# CallLogDB

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: checks.yml
api_reference/: index.html
call_log_&_errors_app/call_log/: APIEvent.py  Call.py  Event.py  GetDataFromCallLog.py  HTTPEvent.py  __init__.py  call_log_data.py
call_log_&_errors_app/errors/: AddError.py  Error.py  __init__.py  error_class.py  insert_error_in_db.py
call_log_&_errors_app/logger/: __init__.py  log_manager.py
call_log_&_errors_app/settings/: setting.ini
calllogdb/: __init__.py
calllogdb/api/: api_client.py
calllogdb/calls/: __init__.py  calls.py
calllogdb/core/: __init__.py  config.py  constants.py
calllogdb/db/: database.py  models.py
calllogdb/types/: __init__.py  call.py  calls.py  event.py  event_base.py  events.py
dev_tools/: index.html
docs/: installation.md  usage.md
installation/: index.html
modules/api/: index.html
modules/core/: index.html
modules/db/: index.html
modules/types/: index.html
modules/utils/: index.html
search/: search_index.json
site/: 404.html  index.html
site/installation/: index.html
site/search/: search_index.json
site/usage/: index.html
src/calllogdb/: __init__.py  call_log.py  call_log.pyi  calllog.py
tests/test_api/: test_api_client.py
tests/test_core/: test_config.py
tests/test_types/: test_call.py  test_calls.py  test_event.py  (+3 more)
usage/: index.html
(+25 files in other folders)
