[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calllogdb"
version = "0.1.0"
description = "Библиотека для работы с call_log"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary - internal use only" }
authors = [
    { name = "miomelliot", email = "s89652158910@gmail.com" },
    { name = "Alexeyalexeyalexm", email = "silaenckov2014@yandex.ru" },
    { name = "deydysh" },
]
urls = { Homepage = "https://github.com/Mcn-BPA/CallLogDB" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]


[tool.ruff]
exclude = [".git", "__pycache__", "build", "dist", "venv", "env", "migrations"]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "N", "I", "C"]
ignore = ["E203"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.lint.mccabe]
max-complexity = 8


[tool.black]
line-length = 120
target-version = ["py312"]


[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
